# wx_cmake_fetchcontent_template

./: CMakeLists.txt  Info.plist  README.md  main.cpp  resources.rc
